# Polaris

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  Makefile  README.md  README.zh-CN.md  clear_openai_files.sh  docker-compose.yml  go.mod  go.sum  grafana.yml  message.txt  prometheus.yml
.github/workflows/: ci.yml  publish-image.yml  release.yml
bot/: CMakeLists.txt  README.md  main.py  requirements.txt
bot/cogs/: __init__.py  messages.py
bot/components/: curl_builder.py  message_chain.py
bot/config/: settings.json
bot/docker/: Dockerfile
bot/downloaded_attachments/: 1346678416178544762  1346793648636821575.gdoc  1346795673214914590.mov
bot/src/: main.cpp
cmd/polaris/: main.go
config/: polaris.example.yaml  polaris.live-smoke.yaml  polaris.yaml
config/providers/: anthropic.yaml  bedrock.yaml  bytedance.yaml  deepseek.yaml  elevenlabs.yaml  featherless.yaml  fireworks.yaml  glm.yaml  google-vertex.yaml  google.yaml  groq.yaml  minimax.yaml  mistral.yaml  moonshot.yaml  nvidia.yaml  ollama.yaml  openai.yaml  openrouter.yaml  qwen.yaml  replicate.yaml  together.yaml  xai.yaml
config/routing/: example.yaml  live-smoke.yaml  local.yaml
config/security/: gosec_allowlist.json
database/: 001_db_schema.sql  Dockerfile.pgvector
deployments/: Dockerfile  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml
deployments/pgadmin/: servers.json
deployments/prometheus/: prometheus.yml
docs/: ADDING_PROVIDER.md  API_REFERENCE.md  ARCHITECTURE.md  AUTHENTICATION.md  CONFIGURATION.md  CONTRIBUTING.md  INTEGRATION_RECIPES.md  LOAD_TESTING.md  PRICING.md  PROVIDERS.md
internal/config/: config.go  config_test.go  v2.go  validate.go  validate_audio_test.go  validate_controlplane_test.go  validate_music_test.go  validate_routing_test.go  watcher.go  watcher_test.go
internal/gateway/: audio_cache_test.go  controlplane_test.go  conversation_interfaces_test.go  interpreting_test.go  keys_test.go  music_test.go  phase3_usage_test.go  routes.go  routes_core.go  routes_mcp.go  routes_realtime.go  routes_v1.go  server.go  server_test.go  tracing_test.go  translation_test.go  video_test.go  voice_catalog_test.go  voice_stream_test.go
internal/modality/: audio.go  audio_test.go  capabilities.go  chat.go  embed.go  embed_test.go  image.go  interpreting.go  music.go  notes.go  podcast.go  routing.go  tokens.go  translation.go  video.go  voice.go  voice_assets.go  voice_catalog.go  voice_stream.go
internal/pricing/: catalog.go  catalog_test.go  data_test.go  default.go  embed.go  estimator.go  estimator_test.go  loader.go  (+2 more)
lavalink/: application.yml
llm_server/: CMakeLists.txt  main.py  requirements.txt
llm_server/config/: example.config.json
llm_server/docker/: Dockerfile
llm_server/include/models/: google_gemini2_pro.hpp  openai_gpt_4.hpp  openai_gpt_4o.hpp  openai_o1.hpp  openai_o3.hpp  openai_o3_mini.hpp  qingyunke.hpp
llm_server/include/models/openai/: gpt4.hpp  gpt4o.hpp
llm_server/include/server/: discord_request.hpp  http_server.hpp  request_handler.hpp
llm_server/include/utils/: http_utils.hpp  imodel.hpp  logger.hpp  model_common.hpp  model_result.hpp  multipart_utils.hpp  string_utils.hpp  token_tracker.hpp
llm_server/include/utils/openai/: error_msg.hpp  utils.hpp
llm_server/models/deepseek/: __init__.py  deepseek_chat.py  deepseek_reasoner.py
llm_server/models/google/: __init__.py
llm_server/models/openai/: __init__.py
llm_server/server/: service.py
llm_server/server/api/: __init__.py  api.py  api.py.bak  router.py
llm_server/server/api/v1/: __init__.py  files.py  health.py  logs.py  metrics.py  router.py  status.py
llm_server/server/api/v1/chat/: __init__.py  completions.py  router.py
llm_server/src/: main.cpp
llm_server/src/models/: google_gemini2_pro.cpp  openai_gpt_4.cpp  openai_gpt_4o.cpp  openai_o1.cpp  openai_o3.cpp  openai_o3_mini.cpp  qingyunke.cpp
llm_server/src/models/openai/: gpt4.cpp  gpt4o.cpp
llm_server/src/server/: discord_request.cpp  http_server.cpp  request_handler.cpp
llm_server/src/utils/: http_utils.cpp  logger.cpp  multipart_utils.cpp  token_tracker.cpp
llm_server/src/utils/openai/: error_msg.cpp  utils.cpp
llm_server/tools/: logger.py  matrics.py  response.py
llm_server/tools/config/: __init__.py  load.py
llm_server/tools/database/: __init__.py
llm_server/tools/database/attachment/: README.md  __init__.py  create.py  delete.py  read.py  update.py
llm_server/tools/database/auth/: __init__.py  token.py
llm_server/tools/database/file/: README.md  __init__.py  create.py  delete.py  read.py  update.py
llm_server/tools/database/message/: README.md  __init__.py  create.py  delete.py  read.py  update.py
llm_server/tools/database/thread/: README.md  __init__.py  create.py  delete.py  read.py  update.py
llm_server/tools/database/vector/: README.md  __init__.py  create.py  delete.py  read.py  update.py
llm_server/tools/docs/: README.md  __init__.py  attachment_utils.py  chunking.py  context_utils.py  embedding_utils.py  message_utils.py  thread_utils.py
llm_server/tools/embed/: __init__.py  text.py
llm_server/tools/llm/: __init__.py  search_indicator.py  summarizer.py  top_k_selector.py
llm_server/tools/parse/: __init__.py  audio.py  image.py  parser.py  pdf.py  rtfdoc.py  textdoc.py  video.py
llm_server/tools/search/: README.md  __init__.py  unified_search.py
llm_server/tools/search/video/: __init__.py  youtube_transcript.py
llm_server/tools/search/web_scrap/: __init__.py  firecrawl_scraper.py
llm_server/tools/search/web_search/: __init__.py  linkup_search.py  tavily_search.py
llm_server/tools/tokenizer/: __init__.py
llm_server/tools/tokenizer/deepseek/: __init__.py  deepseek-chat.py  deepseek-reasoner.py
llm_server/tools/tokenizer/google/: __init__.py  gemini-1.5-pro-latest.py  gemini-2.0-flash-001.py
llm_server/tools/tokenizer/openai/: __init__.py  gpt-3.5-turbo.py  gpt-4.py
postgrest/: Dockerfile  postgrest.conf
schema/: polaris.config.schema.json
scripts/: generate-key.go  local-stack.sh  migrate.go  stack.sh
(+347 files in other folders)
